syntax = "proto3";

package grpc_api;
option go_package = "github.com/raonismaneoto/CustomDHT/node/api/grpc_api";

service DHTNode {
  rpc Ping (Empty) returns (Empty) {}
  rpc Successor(Empty) returns (SuccessorResponse) {}
  rpc Predecessor(Empty) returns (PredecessorResponse) {}
  rpc HandleNewPredecessor (HandleNewPredecessorRequest) returns (HandleNewPredecessorResponse) {}
  rpc HandleNewSuccessor (HandleNewSuccessorRequest) returns (HandleNewSuccessorResponse) {}
  rpc Query (QueryRequest) returns (QueryResponse) {}
  rpc Save (SaveRequest) returns (Empty) {}
  rpc Delete (DeleteRequest) returns (Empty) {}
  rpc HandleChurn (HandleChurnRequest) returns (HandleChurnResponse) {}
  rpc SyncData (SyncDataRequest) returns (SyncDataResponse) {}
}

message Empty {

}

message SuccessorResponse {
    int64 id = 1;
    string endpoint = 2;
}

message PredecessorResponse {
    int64 id = 1;
    string endpoint = 2;
}

message HandleNewPredecessorRequest {
    int64 id = 1;
    string endpoint = 2;
}

message HandleNewPredecessorResponse {
    bytes data = 3;
}

message HandleNewSuccessorRequest {
    int64 id = 1;
    string endpoint = 2;
}

message HandleNewSuccessorResponse {
    int64 id = 1;
    string endpoint = 2;
}

message QueryRequest {
    int64 key = 1;
}

message QueryResponse {
    bytes data = 1;
    int64 responsibleNodeId = 2;
    string responsibleNodeEndpoint = 3;
}

message HandleChurnRequest {
    int64 churningNodeId = 1;
    string churningNodeEndpoint = 2;
}

message HandleChurnResponse {
    int64 successorId = 1;
    string successorEndpoint = 2;
    int64 predecessorId = 3;
    string predecessorEndpoint = 4;
}

message SyncDataRequest {
    int64 id = 1;
}

message SyncDataResponse {
    bytes data = 1;
}

message SaveRequest {
    int64 key = 1;
    bytes data = 2;
}

message DeleteRequest {
    int64 key = 1;
}
